--- a/frontend/src/components/FeaturedRecipe/FeaturedRecipe.css
+++ b/frontend/src/components/FeaturedRecipe/FeaturedRecipe.css
@@ -1,7 +1,7 @@
 .featured-wrapper {
   max-width: 1400px;
   margin: 0 auto;
-  padding: 2rem 1rem;
+ padding-bottom: 50px;
   padding-top: 0px;
   font-family: "Poppins", sans-serif;
 }
